feat: GPT2 tuning with Verne

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy<2.0
 --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 jax[cuda12_local]
+tensorflow[and-cuda]
 flax
 keras
 keras-nlp
